Crash with dyntopo and multires #73706

Closed
opened 2020-02-10 04:54:07 +01:00 by ThinkingPolygons · 4 comments

System Information
Windows 10

Blender Version
Broken: tested on 2.81, 2.82 and 2.83
Worked: ?

Short description of error
I know it's not meant to be used that way lol but turning off dyntopo with multires active causes a crash, so here we go

Exact steps for others to reproduce the error
Launch blender
Go to sculpt mode
Enable Dyntopo (perform a brush stroke to make sure 😉)
Add a multires modifier and hit subdivide once
Turn off dyntopo
Crash

2020-02-10_04-15-36.mp4

**System Information** Windows 10 **Blender Version** Broken: **tested on 2.81, 2.82 and 2.83** Worked: ? **Short description of error** *I know it's not meant to be used that way lol **but*** turning off dyntopo with multires active causes a crash, so here we go **Exact steps for others to reproduce the error** Launch blender Go to sculpt mode Enable Dyntopo (perform a brush stroke to make sure 😉) Add a multires modifier and hit subdivide once Turn off dyntopo Crash [2020-02-10_04-15-36.mp4](https://archive.blender.org/developer/F8331883/2020-02-10_04-15-36.mp4)

Added subscriber: @ThinkingPolygons

Added subscriber: @ThinkingPolygons

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by af6ba4dce5

This issue was referenced by af6ba4dce51136759d27d67a826eafdb421c2c74
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Pablo Dobarro self-assigned this 2020-02-11 16:33:50 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#73706
No description provided.