Fix T73706: Crash after disabling dyntopo with multires modifier

ss->multires is set in sculpt_update_object, which is not called just
after disabling dyntopo, so it needs to be checked before running
reshapeFromCCG

Reviewed By: campbellbarton, brecht

Maniphest Tasks: T73706

Differential Revision: https://developer.blender.org/D6801